Merged core module with domain. Fixed few sonarlint complains